# site-scrapers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  categories.txt  ebag_runner.py  full_export.sh  pyproject.toml  requirements.txt  validate_solution.sh
.github/workflows/: ci.yml
ebag_product_scraper/: README.md  __init__.py  requirements.txt  sample_product.html  scraper.py
tools/: README.md  generate_examples.py  generate_printable.py  reprocess_exports.py
